Added errata for issues submitted by Nikolas Poniros